# Tao_Flow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  tao_flow.toml
.claude/commands/: confluence.md  flow.md  rain.md  reflecting-pool.md  rising-mist.md  riverbank.md  spring.md  still-lake.md  vessel.md
.github/workflows/: ci.yml
docs/: README.md  TLDR.md  architecture.md  clean_water_reflections.md  conflict-resolution.md  creation.md  e2e_testing_plan.md  hallucination_reflections.md  implementation.md  phase_2_reflections.md  phase_3_reflections.md  phase_4_reflections.md  phase_5_reflections.md  phase_6_reflections.md  philosophy.md  same_mind_reflections.md  storm_pearl_reflections.md  water-protocol.md
src/: error.rs  flow.rs  lib.rs  main.rs  pearl.rs
src/config/: mod.rs
src/confluence/: decomposition.rs  detection.rs  eddy.rs  mod.rs  pool.rs  yielding.rs
src/creation/: mod.rs
src/provider/: anthropic.rs  claude_cli.rs  mod.rs  tmux.rs
src/still_lake/: mod.rs
src/vessel/: config.rs  mod.rs  tmux.rs  wiring.rs
src/water/: mod.rs  ocean.rs  rain.rs  river.rs  stream.rs  vapor.rs
src/watershed/: mineral_classifier.rs  mod.rs  spring.rs  volume_sensor.rs
src/watershed/source/: anthropic.rs  claude_cli.rs  llama.rs  mod.rs  tmux_pane.rs
src/watershed/springs/: desert.rs  forest.rs  mod.rs  mountain.rs
tests/: e2e_flow.rs  still_lake_comparison.rs  still_lake_replay.rs  vessel_integration.rs
