[package]
name = "tao_flow"
version = "0.1.0"
edition = "2021"
description = "A multi-LLM system that flows like water"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
futures = "0.3"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
