[package]
name = "tao_flow"
version = "0.1.0"
edition = "2021"
description = "A multi-LLM system that flows like water"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
futures = "0.3"
